--- a/phone.html
+++ b/phone.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="title">
-            <h1>(623) 251-0185</h1>
+            <h1><a href="tel:623-251-0185">(623) 251-0185</a></h1>
         </div>
         <a href="index.html">back..</a>
     </body>
