--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="title">
-            <h1>Contact Colben Kharrl.</h1>
+            <p>Contact Colben Kharrl.</p>
         </div>
         <ul id="linkList">
             <li class="link"><a href="https://www.facebook.com/colbenkharrl"><img src="images/facebook.jpg" class="logo" /></a></li>
