--- a/phone.html
+++ b/phone.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <div id="title">
-            <h1><a href="tel:623-251-0185">(623) 251-0185</a></h1>
+            <p><a href="tel:623-251-0185">(623) 251-0185</a></p>
         </div>
-        <a href="index.html">back..</a>
+        <a href="index.html">Return</a>
     </body>
 </html>
