open links in new tabs

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
             <p>Contact Colben Kharrl.</p>
         </div>
         <ul id="linkList">
-            <li class="link"><a href="https://www.facebook.com/colbenkharrl"><img src="images/facebook.jpg" class="logo" /></a></li>
-            <li class="link"><a href="https://twitter.com/mattkharrl"><img src="images/twitter.png" class="logo" /></a></li>
-            <li class="link"><a href="https://instagram.com/mattkharrl"><img src="images/instagram.png" class="logo" /></a></li>
-            <li class="link"><a href="https://plus.google.com/u/0/102002134115047486813/posts"><img src="images/googleplus.png" class="logo" /></a></li>
-            <li class="link"><a href="https://www.linkedin.com/in/colben-kharrl-21a155a8"><img src="images/linkedin.png" class="logo" /></a></li>
-            <li class="link"><a href="https://github.com/colbenkharrl"><img src="images/github.png" class="logo" /></a></li>
+            <li class="link"><a href="https://www.facebook.com/colbenkharrl" target="_blank"><img src="images/facebook.jpg" class="logo" /></a></li>
+            <li class="link"><a href="https://twitter.com/mattkharrl" target="_blank"><img src="images/twitter.png" class="logo" /></a></li>
+            <li class="link"><a href="https://instagram.com/mattkharrl" target="_blank"><img src="images/instagram.png" class="logo" /></a></li>
+            <li class="link"><a href="https://plus.google.com/u/0/102002134115047486813/posts" target="_blank"><img src="images/googleplus.png" class="logo" /></a></li>
+            <li class="link"><a href="https://www.linkedin.com/in/colben-kharrl-21a155a8" target="_blank"><img src="images/linkedin.png" class="logo" /></a></li>
+            <li class="link"><a href="https://github.com/colbenkharrl" target="_blank"><img src="images/github.png" class="logo" /></a></li>
             <li class="link"><a href="mailto:colbenkharrl@gmail.com"><img src="images/email.jpg" class="logo" /></a></li>
             <li class="link"><a href="phone.html"><img src="images/phone.jpg" class="logo" /></a></li>
         </ul>
