--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
         <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
     </head>
     <body>
-        <div id="title">
+        <div class="outer">
+        <div class="middle">
+        <div class="inner">
             <p>Contact Colben Kharrl.</p>
+            <ul id="linkList">
+                <li class="link"><a href="https://www.facebook.com/colbenkharrl" target="_blank"><img src="images/facebook.jpg" class="logo" /></a></li>
+                <li class="link"><a href="https://twitter.com/mattkharrl" target="_blank"><img src="images/twitter.png" class="logo" /></a></li>
+                <li class="link"><a href="https://instagram.com/mattkharrl" target="_blank"><img src="images/instagram.png" class="logo" /></a></li>
+                <li class="link"><a href="https://plus.google.com/u/0/102002134115047486813/posts" target="_blank"><img src="images/googleplus.png" class="logo" /></a></li>
+                <li class="link"><a href="https://www.linkedin.com/in/colben-kharrl-21a155a8" target="_blank"><img src="images/linkedin.png" class="logo" /></a></li>
+                <li class="link"><a href="https://github.com/colbenkharrl" target="_blank"><img src="images/github.png" class="logo" /></a></li>
+                <li class="link"><a href="mailto:colbenkharrl@gmail.com"><img src="images/email.jpg" class="logo" /></a></li>
+                <li class="link"><a href="phone.html"><img src="images/phone.jpg" class="logo" /></a></li>
+            </ul>
         </div>
-        <ul id="linkList">
-            <li class="link"><a href="https://www.facebook.com/colbenkharrl" target="_blank"><img src="images/facebook.jpg" class="logo" /></a></li>
-            <li class="link"><a href="https://twitter.com/mattkharrl" target="_blank"><img src="images/twitter.png" class="logo" /></a></li>
-            <li class="link"><a href="https://instagram.com/mattkharrl" target="_blank"><img src="images/instagram.png" class="logo" /></a></li>
-            <li class="link"><a href="https://plus.google.com/u/0/102002134115047486813/posts" target="_blank"><img src="images/googleplus.png" class="logo" /></a></li>
-            <li class="link"><a href="https://www.linkedin.com/in/colben-kharrl-21a155a8" target="_blank"><img src="images/linkedin.png" class="logo" /></a></li>
-            <li class="link"><a href="https://github.com/colbenkharrl" target="_blank"><img src="images/github.png" class="logo" /></a></li>
-            <li class="link"><a href="mailto:colbenkharrl@gmail.com"><img src="images/email.jpg" class="logo" /></a></li>
-            <li class="link"><a href="phone.html"><img src="images/phone.jpg" class="logo" /></a></li>
-        </ul>
+        </div>
+        </div>
     </body>
 </html>
