--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p>Contact Colben Kharrl.</p>
             <ul id="linkList">
                 <li class="link"><a href="mailto:colbenkharrl@gmail.com"><img src="images/email.png" class="logo" /></a></li>
-                <li class="link"><a href="phone.html"><img src="images/phone.png" class="logo" /></a></li>
+                <li class="link"><a href="tel:623-251-0185"><img src="images/phone.png" class="logo" /></a></li>
                 <li class="link"><a href="https://www.linkedin.com/in/colben-kharrl-21a155a8" target="_blank"><img src="images/linkedin.png" class="logo" /></a></li>
                 <li class="link"><a href="https://github.com/colbenkharrl" target="_blank"><img src="images/github.png" class="logo" /></a></li>
                 <li class="link"><a href="https://www.facebook.com/colbenkharrl" target="_blank"><img src="images/facebook.png" class="logo" /></a></li>
