--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Colben Kharrl</title>
+        <meta name="google-site-verification" content="4A5bPyqqqm668KN4zEX0cSxvkvHaR2VfuBlqJVhQVG4" />
         <link rel="stylesheet" type="text/css" href="style.css" />
         <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
     </head>
