Name change (goodbye colben)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Colben Kharrl</title>
+        <title>Matt Kharrl</title>
         <meta name="google-site-verification" content="4A5bPyqqqm668KN4zEX0cSxvkvHaR2VfuBlqJVhQVG4" />
         <link rel="stylesheet" type="text/css" href="style.css" />
         <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
@@ -10,9 +10,9 @@
         <div class="outer">
         <div class="middle">
         <div class="inner">
-            <p>Contact Colben Kharrl.</p>
+            <p>Contact Matt Kharrl.</p>
             <ul id="linkList">
-                <li class="link"><a href="mailto:colbenkharrl@gmail.com"><img src="images/email.png" class="logo" /></a></li>
+                <li class="link"><a href="mailto:m@kharrl.com"><img src="images/email.png" class="logo" /></a></li>
                 <li class="link"><a href="tel:623-251-0185"><img src="images/phone.png" class="logo" /></a></li>
                 <li class="link"><a href="https://github.com/colbenkharrl" target="_blank"><img src="images/github.png" class="logo" /></a></li>
                 <li class="link"><a href="https://www.linkedin.com/in/colben-kharrl-21a155a8" target="_blank"><img src="images/linkedin.png" class="logo" /></a></li>
