--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li class="link"><a href="mailto:m@kharrl.com"><img src="images/email.png" class="logo" /></a></li>
                 <li class="link"><a href="tel:623-251-0185"><img src="images/phone.png" class="logo" /></a></li>
                 <li class="link"><a href="https://github.com/colbenkharrl" target="_blank"><img src="images/github.png" class="logo" /></a></li>
-                <li class="link"><a href="https://www.linkedin.com/in/colben-kharrl-21a155a8" target="_blank"><img src="images/linkedin.png" class="logo" /></a></li>
+                <li class="link"><a href="https://linkedin.com/in/mattkharrl" target="_blank"><img src="images/linkedin.png" class="logo" /></a></li>
                 <li class="link"><a href="https://www.facebook.com/colbenkharrl" target="_blank"><img src="images/facebook.png" class="logo" /></a></li>
                 <li class="link"><a href="https://twitter.com/mattkharrl" target="_blank"><img src="images/twitter.png" class="logo" /></a></li>
                 <li class="link"><a href="https://instagram.com/mattkharrl" target="_blank"><img src="images/instagram.png" class="logo" /></a></li>
