--- a/index.html
+++ b/index.html
@@ -86,25 +86,25 @@
 				<div class="thumbnail col-xs-6">
 					<a href="https://www.threatmetrix.com/" target="_blank"><img src="http://imgur.com/hEQz3Ex.png"></a>
 					<div class="caption">
-						<h4><strong>Role:</strong> Project Manager Intern</h4>
+						<h4><strong>Project Manager Intern</strong></h4>
 					</div>
 				</div>
 				<div class="thumbnail col-xs-6">
 					<a href="http://www.edupoint.com/" target="_blank"><img src="http://imgur.com/YNiw81B.png"></a>
 					<div class="caption">
-						<h4><strong>Role:</strong> Software Development Intern</h4>
+						<h4><strong>Software Development Intern</strong></h4>
 					</div>
 				</div>
 				<div class="thumbnail col-xs-6">
 					<a href="http://support.apple.com/" target="_blank"><img src="http://imgur.com/bSp9xn3.png"></a>
 					<div class="caption">
-						<h4><strong>Role:</strong> Technical Support Advisor</h4>
+						<h4><strong>Technical Support Advisor</strong></h4>
 					</div>
 				</div>
 				<div class="thumbnail col-xs-6">
 					<a href="https://eoss.asu.edu/drc" target="_blank"><img src="http://imgur.com/vQGnusG.png"></a>
 					<div class="caption">
-						<h4><strong>Role:</strong> Editor/Transcriber</h4>
+						<h4><strong>Editor/Transcriber</strong></h4>
 					</div>
 				</div>
 			</div>
