--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 						<li class="list-group-item">Relational databases and data management (SQL)</li>
 						<li class="list-group-item">Programming paradigms (procedural, object-oriented, functional, logical)</li>
 						<li class="list-group-item">Development platforms (Visual Studio, Xcode, Eclipse, Terminal, etc.)</li>
+						<li class="list-group-item">Version Control Systems (Git, TFS)</li>
 						<li class="list-group-item">Customer service/Communication (personal, phone, and email)</li>
 					</ul>
 				</div>
