--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta name="google-site-verification" content="4A5bPyqqqm668KN4zEX0cSxvkvHaR2VfuBlqJVhQVG4" />
 		<title>Matt Kharrl</title>
+		<link href="/images/favicon.ico" rel="icon" type="image/x-icon" />
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
