--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					</div>
 				</div>
 				<div class="thumbnail col-xs-6">
-					<a href="http://www.edupoint.com/" target="_blank"><img src="http://imgur.com/YNiw81B.png"></a>
+					<a href="http://www.edupoint.com/Products/Student-Information-Management" target="_blank"><img src="http://imgur.com/YNiw81B.png"></a>
 					<div class="caption">
 						<h4><strong>Software Development Intern</strong></h4>
 					</div>
