--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<div class="thumbnail col-xs-6">
 					<a href="https://www.threatmetrix.com/" target="_blank"><img src="http://imgur.com/hEQz3Ex.png"></a>
 					<div class="caption">
-						<h4><strong>Project Manager Intern</strong></h4>
+						<h4><strong>Product Management Intern</strong></h4>
 					</div>
 				</div>
 				<div class="thumbnail col-xs-6">
