--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
 					<hr class="my-4">
 					<h3 class="display-3">Here are some things that I know about:</h3>
 					<ul class="list-group">
-						<li class="list-group-item">Programming languages (Java, C#, C/C++, Swift3, Python3)</li>
+						<li class="list-group-item">Programming languages (Java, C#, JavaScript, Swift3, Python3, C/C++)</li>
 						<li class="list-group-item">Markup languages (HTML, CSS, XML, JSON, Bootstrap)</li>
+						<li class="list-group-item">Web design technologies (jQuery, D3, Crossfilter)</li>
 						<li class="list-group-item">Relational databases and data management (SQL)</li>
 						<li class="list-group-item">Programming paradigms (procedural, object-oriented, functional, logical)</li>
 						<li class="list-group-item">Development platforms (Visual Studio, Xcode, Eclipse, Terminal, etc.)</li>
