--- a/index.html
+++ b/index.html
@@ -5,31 +5,42 @@
 	<title>Matt Kharrl</title>
 	<link href="images/favicon.ico" rel="icon" type="image/x-icon" />
 	<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="stylesheet" type="text/css" href="styles/style.css" />
 </head>
 <body>
 
-	<nav class="navbar navbar-expand-md navbar-light bg-faded">
-		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<a class="navbar-brand" href="#top">
-			<img alt="Brand" src="http://imgur.com/bo3yWgx.jpg" style="height: 80px; border-radius: 40px;" /> Matt Kharrl
-		</a>
-	</div>
+	<nav class="navbar navbar-expand-md navbar-light bg-faded fixed-top hidden">
+		<a class="navbar-brand mr-auto" href="#top">Matt Kharrl</a>
+		<ul class="navbar-nav">
+			<li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contact Me</a>
+			<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+				<a class="dropdown-item" href="mailto:m@kharrl.com">Mail</a>
+				<a class="dropdown-item" href="https://github.com/colbenkharrl" target="_blank">Github</a>
+				<a class="dropdown-item" href="https://linkedin.com/in/mattkharrl" target="_blank">LinkedIn</a>
+				<a class="dropdown-item" href="https://www.facebook.com/colbenkharrl" target="_blank">Facebook</a>
+				<a class="dropdown-item" href="https://twitter.com/mattkharrl" target="_blank">Twitter</a>
+				<a class="dropdown-item" href="https://instagram.com/mattkharrl" target="_blank">Instagram</a>
+				<a class="dropdown-item" href="https://plus.google.com/u/0/102002134115047486813/posts" target="_blank">Google+</a>
+			</div>
+			</li>
+		</ul>
 </nav>
 <div class="container-fluid" name="top">
-	<footer class="text-center">
-		<hr>
-		<p>Written and coded by <a href="https://github.com/colbenkharrl/colbenkharrl.github.io" target="_blank">Matt Kharrl</a>.</p>
-	</footer>
+	<div class="row top-content">
+	</div>
+	<div class="row bottom-content">
+	</div>
 </div>
 <!-- scripts-->
 <div class="scripts">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.10.0/d3.min.js" integrity="sha256-r7j1FXNTvPzHR41+V71Jvej6fIq4v4Kzu5ee7J/RitM=" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+	<script src="scripts/build.js"></script>
 </div>
 </body>
 </html>
