--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta name="google-site-verification" content="4A5bPyqqqm668KN4zEX0cSxvkvHaR2VfuBlqJVhQVG4" />
 	<title>Matt Kharrl</title>
 	<link href="images/favicon.ico" rel="icon" type="image/x-icon" />
-	<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Oswald:400,600" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="styles/style.css" />
@@ -17,9 +17,12 @@
 			<li class="nav-item dropdown">
 			<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contact Me</a>
 			<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+				<h6 class="dropdown-header">Direct</h6>
 				<a class="dropdown-item" href="mailto:m@kharrl.com">Mail</a>
-				<a class="dropdown-item" href="https://github.com/colbenkharrl" target="_blank">Github</a>
 				<a class="dropdown-item" href="https://linkedin.com/in/mattkharrl" target="_blank">LinkedIn</a>
+				<a class="dropdown-item" href="https://github.com/colbenkharrl" target="_blank">Github</a>
+				<div class="dropdown-divider"></div>
+				<h6 class="dropdown-header">Social Media</h6>
 				<a class="dropdown-item" href="https://www.facebook.com/colbenkharrl" target="_blank">Facebook</a>
 				<a class="dropdown-item" href="https://twitter.com/mattkharrl" target="_blank">Twitter</a>
 				<a class="dropdown-item" href="https://instagram.com/mattkharrl" target="_blank">Instagram</a>
@@ -31,7 +34,28 @@
 <div class="container-fluid" name="top">
 	<div class="row top-content">
 	</div>
+	<div class="row mid-nav">
+		<div class="col-12">
+			<ul class="nav justify-content-center">
+				<li class="nav-item">
+					<a class="nav-link" href="#" onclick="return false;">About</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#" onclick="return false;">Education</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#" onclick="return false;">Experience</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#" onclick="return false;">Projects</a>
+				</li>
+			</ul>
+		</div>
+	</div>
 	<div class="row bottom-content">
+		<div class="container">
+			<h1 class="text-center" style="color: black; font-size: 72px; font-family: 'Lobster', cursive; margin-top: 20px;">Coming Soon...</h1>
+		</div>
 	</div>
 </div>
 <!-- scripts-->
