--- a/index.html
+++ b/index.html
@@ -13,9 +13,25 @@
 
 	<nav class="navbar navbar-expand-md navbar-light bg-faded fixed-top hidden">
 		<a class="navbar-brand mr-auto" href="#top">Matt Kharrl</a>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="#">About</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Experience</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Education</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Projects</a>
+				</li>
+			</ul>
+		</div>
 		<ul class="navbar-nav">
 			<li class="nav-item dropdown">
-			<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contact Me</a>
+			<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="text-nowrap">Contact Me</span></a>
 			<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
 				<h6 class="dropdown-header">Direct</h6>
 				<a class="dropdown-item" href="mailto:m@kharrl.com">Mail</a>
@@ -33,24 +49,6 @@
 </nav>
 <div class="container-fluid" name="top">
 	<div class="row top-content">
-	</div>
-	<div class="row mid-nav">
-		<div class="col-12">
-			<ul class="nav justify-content-center">
-				<li class="nav-item">
-					<a class="nav-link" href="#" onclick="return false;">About</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#" onclick="return false;">Education</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#" onclick="return false;">Experience</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#" onclick="return false;">Projects</a>
-				</li>
-			</ul>
-		</div>
 	</div>
 	<div class="row bottom-content">
 		<div class="container">
