--- a/index.html
+++ b/index.html
@@ -1,68 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta name="google-site-verification" content="4A5bPyqqqm668KN4zEX0cSxvkvHaR2VfuBlqJVhQVG4" />
-	<title>Matt Kharrl</title>
-	<link href="images/favicon.ico" rel="icon" type="image/x-icon" />
-	<link href="https://fonts.googleapis.com/css?family=Oswald:400,600" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="styles/style.css" />
-</head>
-<body>
-
-	<nav class="navbar navbar-expand-md navbar-light bg-faded fixed-top hidden">
-		<a class="navbar-brand mr-auto" href="#top">Matt Kharrl</a>
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item">
-					<a class="nav-link" href="#">About</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Experience</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Education</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Projects</a>
-				</li>
-			</ul>
-		</div>
-		<ul class="navbar-nav">
-			<li class="nav-item dropdown">
-			<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="text-nowrap">Contact Me</span></a>
-			<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-				<h6 class="dropdown-header">Direct</h6>
-				<a class="dropdown-item" href="mailto:m@kharrl.com">Mail</a>
-				<a class="dropdown-item" href="https://linkedin.com/in/mattkharrl" target="_blank">LinkedIn</a>
-				<a class="dropdown-item" href="https://github.com/colbenkharrl" target="_blank">Github</a>
-				<div class="dropdown-divider"></div>
-				<h6 class="dropdown-header">Social Media</h6>
-				<a class="dropdown-item" href="https://www.facebook.com/colbenkharrl" target="_blank">Facebook</a>
-				<a class="dropdown-item" href="https://twitter.com/mattkharrl" target="_blank">Twitter</a>
-				<a class="dropdown-item" href="https://instagram.com/mattkharrl" target="_blank">Instagram</a>
-				<a class="dropdown-item" href="https://plus.google.com/u/0/102002134115047486813/posts" target="_blank">Google+</a>
-			</div>
-			</li>
-		</ul>
-</nav>
-<div class="container-fluid" name="top">
-	<div class="row top-content">
-	</div>
-	<div class="row bottom-content">
-		<div class="container">
-			<h1 class="text-center" style="color: black; font-size: 72px; font-family: 'Lobster', cursive; margin-top: 40px;">Coming Soon...</h1>
-		</div>
-	</div>
-</div>
-<!-- scripts-->
-<div class="scripts">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.10.0/d3.min.js" integrity="sha256-r7j1FXNTvPzHR41+V71Jvej6fIq4v4Kzu5ee7J/RitM=" crossorigin="anonymous"></script>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-	<script src="scripts/build.js"></script>
-</div>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Matt Kharrl</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><link href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet"><!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet"> --><link href="styles.c285ed4fc74681cdc3f2.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="inline.66b30e105bd3f61e8acd.bundle.js"></script><script type="text/javascript" src="polyfills.20d568069cc37df12f96.bundle.js"></script><script type="text/javascript" src="main.e4ced14f84c2dcda380e.bundle.js"></script></body></html>
